# phantom

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yml  env-dev.sample  env.sample  package.json  pyproject.toml  run-fox.sh  run-mona.sh  run-panther.sh  run-schema-builder.sh
craw/: .gitignore  Dockerfile  pyproject.toml
craw/scripts/: codegen.sh  start.sh
craw/src/craw/: cli.py  logger.py  server.py
craw/src/craw/crawler/: crawler.py  find_archives.py
craw/src/craw/models/: jobs.py
craw/tests/: debug.py  test_parse.py
mona/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  main.py  pyproject.toml
mona/scripts/: build-schema.sh  run-test.sh
mona/src/mona/: cli.py  compute_path.py  config.py  cui.py  default_config.py  find_archives.py  logger.py  main.py  merge_dict.py  merge_json.py  merge_xml.py  parse.py  server.py
mona/src/mona/crawler/: config.py  crawler.py  parse.py
mona/src/mona/manifest_processor/: base.py  image_info.py  metadata.py  ocr.py  xslt.py
mona/src/mona/metadata/: get_metadata.py
mona/src/mona/server/: server.py
mona/src/mona/server/models/: documents.py  jobs.py
mona/src/mona/server/routers/: documents.py  jobs.py
mona/src/mona/stylesheets/1.0/: application-body.xsl  cpy-ntc-pt-e-rn.xsl  cpy-ntc-pt-e.xsl  cpy-ntc-pt-f.xsl  fields.xsl  foreign-language-body.xsl  images.xsl  ntc-ninsyo.xsl  pat-amnd.xsl  pat-appd.xsl  pat-etc.xsl  pat-rspn.xsl  procedure.xsl  text.xsl  v4xva_ntc-pt-e-rn.xsl  v4xva_ntc-pt-e.xsl  v4xva_ntc-pt-f.xsl
mona/src/mona/stylesheets/1.0/common-templates/: agents.xsl  applicants.xsl  country.xsl  date-templates.xsl  dispatch-control-article.xsl  doc-code.xsl  doc-number.xsl  ntc-ninsyo.xsl  ntc-paragraph.xsl  pat_common.xsl  string-utils.xsl
mona/src/mona/stylesheets/1.0/schema/: schema-dsl.xsl
mona/src/mona/stylesheets/1.0/sub-templates/: pat-appd.xsl  pat-rspn.xsl
mona/src/mona/stylesheets/2.0/: application-body.xsl  cpy-ntc-pt-e-rn.xsl  cpy-ntc-pt-f.xsl  fields.xsl  pat-amnd.xsl  pat-appd.xsl  pat-etc.xsl  procedure.xsl  v4xva_ntc-pt-e-rn.xsl  v4xva_ntc-pt-e.xsl
mona/src/mona/stylesheets/2.0/common-templates/: date-templates.xsl  dispatch-control-article.xsl  doc-number.xsl  string-utils.xsl  (+1 more)
mona/src/mona/xml/: translate.py
mona/src/mona/xml_pkg/: merge.py  translate.py
mona/src/mona/xml_pkg/translation/: factory.py  subr.py  translators.py
mona/tests/: debug.py  test_parse.py  translate_xml.py  validate.py
panther/: .dockerignore  .envrc  .gitignore  Dockerfile  Dockerfile.dev  README.md  main.py  pyproject.toml
panther/elasticsearch/: document-mapping.json
panther/scripts/: build-schema.sh
panther/src/panther/: create_db.py  create_index.py  document_json.py  es_client.py  es_patent_doc.py  import_extra_data.py  ip_document.py  load_document.py  main.py  normalize.py  patent_doc_editor.py  restore_metadata_to_es.py  types.py  upload_documents.py  upload_es.py  upload_extra_data.py
queen/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
queen/scripts/: build-all.sh  build-fox.sh  build-image.sh  build-panther.sh  build-pkg.sh  build-schema.sh  build-ts-guard.sh  build-ts-schema.sh  build_dev_map.sh  copy-config.sh  translate-all.sh  translate.sh
queen/src/queen/: __init__.py  build_dev_map.py  config.py  main.py  merge.py  translate.py  translate_all.py  translate_xml.py  xslt.py
queen/src/queen.egg-info/: SOURCES.txt
queen/src/queen/stylesheets/1.0/: v4xva_ntc-pt-e-rn.xsl  v4xva_ntc-pt-f.xsl
queen/src/queen/stylesheets/2.0/: attaching-document.xsl  bibliographic-items.xsl  cpy-ntc-pt-e-rn.xsl  cpy-ntc-pt-e.xsl  cpy-ntc-pt-f.xsl  fields.xsl  foreign-language-body.xsl  full-text.xsl  image-desc.xsl  images-information.xsl  pat-amnd.xsl  pat-appd.xsl  pat-etc.xsl  pat-rspn.xsl  procedure.xsl  v4xva_ntc-pt-e-rn.xsl  v4xva_ntc-pt-e.xsl  v4xva_ntc-pt-f.xsl
queen/src/queen/stylesheets/schema/: schema-dsl.xsl
queen/stylesheets/1.0/: cpy-ntc-pt-e-rn.xsl  cpy-ntc-pt-f.xsl  pat-amnd.xsl  pat-rspn.xsl  procedure.xsl  v4xva_ntc-pt-e.xsl
queen/stylesheets/1.0/common-templates/: dispatch-control-article.xsl  unsupported-tags.xsl
queen/stylesheets/2.0/: cpy-ntc-pt-e.xsl  fields.xsl  foreign-language-body.xsl  images.xsl  pat-rspn.xsl  v4xva_ntc-pt-e.xsl  v4xva_ntc-pt-f.xsl
queen/stylesheets/2.0/common-templates/: agents.xsl  applicants.xsl  dispatch-control-article.xsl  ntc-ninsyo.xsl  ntc-paragraph.xsl  pat_common.xsl  unsupported-tags.xsl
queen/tests/: test_translate_all.py
queen/ts/: Dockerfile  package.json
services/navi/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/navi/src/navi/: api_client.py  catalog.py  create_index.py  crow_client.py  crow_scheduler.py  models.py  mona_client.py  panther_client.py  server.py
services/navi/src/navi/routers/: crow.py  dashboard.py  jobs.py  mona.py  orchestration.py  panther.py
services/navi/src/navi/templates/: dashboard.html
services/panther/: .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/panther/elasticsearch/: document-mapping.json
services/panther/scripts/: build-schema.sh  build_openapi.py  start-debug-server.sh
services/panther/src/panther/: cli.py  create_index.py  document_source.py  es_client.py  es_patent_doc.py  logger.py  main.py  mona_client.py  normalize.py  normalizer.py  patent_doc_editor.py  server.py  upload_documents.py
services/panther/tests/: test_cli.py  test_mona_client.py  test_server.py  test_upload_documents.py
services/queen/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  entrypoint.sh  pyproject.toml
services/queen/scripts/: build-all.sh  build-es-mapping.sh  build-json-schema.sh  build-python-schema.sh  build-ts-schema.sh  copy-python-schema.sh  copy-ts-schema.sh  generate_mapping.py  mapping-config.json  run-test.sh  translate-all.sh
services/queen/src/queen/: config.py  convert_case.py  translate_all.py
services/queen/src/queen.egg-info/: PKG-INFO  requires.txt
services/queen/ts/: package-lock.json  package.json
(+1086 files in other folders)
