[project]
dependencies = [
    "datamodel-code-generator[ruff]>=0.55.0",
    "fastapi>=0.135.1",
    "libefiling>=0.1.42",
    "python-json-logger>=4.0.0",
    "queen @ file:///queen",
    "saxonche>=12.9.0",
    "uvicorn>=0.42.0",
]
description = "Add your description here"
name = "craw"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.2"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.3,<0.11.0"]

[dependency-groups]
dev = [
    "openapi-python-client>=0.28.3",
    "pytest>=9.0.2",
]

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["E402"]
"__init__.py" = ["E402"]

[tool.ruff.format]
# 5. Use double quotes in `ruff format`.
quote-style = "double"
