[project]
name = "mona"
version = "0.1.0"
description = ""
authors = [{ name = "hyperion13th144m", email = "hyperion13th144m@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xmltodict (>=1.0.2,<2.0.0)",
    "libefiling (>=0.1.30,<0.2.0)",
    "saxonche (>=12.9.0,<13.0.0)",
]

[tool.poetry]
packages = [{ include = "mona", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["datamodel-code-generator[ruff] (>=0.53.0,<0.54.0)"]

[tool.datamodel-codegen]
input = "../shared/schema/patent-document-schema.json"
input-file-type = "jsonschema"
output = "src/mona/models/patent_document_schema.py"
output-model-type = "pydantic_v2.BaseModel"
use-default-ns = true
force-update = true
disable-timestamp = true
extra-field-aliases = true
formatters = ["ruff-check", "ruff-format"]
