[project]
name = "mona"
version = "0.1.0"
description = ""
authors = [{ name = "hyperion13th144m", email = "hyperion13th144m@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xmltodict (>=1.0.2,<2.0.0)",
    "libefiling>=0.1.30,<0.2.0",
    "saxonche (>=12.9.0,<13.0.0)",
    "python-json-logger>=4.0.0",
    "queen",
]
[tool.poetry]
packages = [{ include = "mona", from = "src" }]

[tool.uv.sources]
queen = { path = "../queen" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = []
