[project]
name = "mona"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libefiling>=0.1.42",
    "python-json-logger>=4.0.0",
    "queen",
    "saxonche>=12.9.0",
]

[tool.uv.sources]
queen = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
