[project]
name = "panther"
version = "0.1.0"
description = ""
authors = [
    {name = "hyperion13th144m",email = "hyperion13th144m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "elasticsearch (>=9.2.1,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "panther", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
