[project]
name = "panther"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datamodel-code-generator[ruff]>=0.54.0",
    "elasticsearch>=9.3.0",
    "pydantic>=2.12.5",
    "ruff>=0.15.4",
]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
