[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.3,<0.11.0"]

[project]
dependencies = [
  "craw-api-client",
  "fastapi>=0.135.1",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.22",
  "requests>=2.32.5",
  "uvicorn>=0.42.0",
]
description = "Add your description here"
name = "navi"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[tool.uv.sources]
craw-api-client = { path = "../../var/api/craw" }
