[project]
dependencies = [
  "datamodel-code-generator[ruff]>=0.54.0",
  "elasticsearch>=9.3.0",
  "fastapi>=0.135.1",
  "pydantic>=2.12.5",
  "python-json-logger>=4.0.0",
  "ruff>=0.15.4",
  "uvicorn>=0.42.0",
]
description = "Add your description here"
name = "panther"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.3,<0.11.0"]

[project.scripts]
panther-cli = "panther.cli:main"
panther-serve = "panther.server:main"
