[project]
authors = [{name = "hyperion13th144m", email = "hyperion13th144m@gmail.com"}]
dependencies = [
  "datamodel-code-generator[ruff]>=0.55.0",
  "pydantic>=2.12.5",
  "ruff>=0.15.7",
  "saxonche>=12.9.0",
]
description = "Add your description here"
name = "queen"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.25"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.3,<0.11.0"]

[dependency-groups]
dev = ["pytest>=9.0.2"]
